--- a/README
+++ b/README
@@ -1,1 +1,10 @@
 LED-Cube
+Hi und herzlich willkommen.
+
+Hier stelle ich nun meinen Code euch zur Verfügung. 
+
+VIEL SPAß DAMIT =)
+
+wünscht,
+
+Avendretter
